--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "atri",
+  "name": "nola",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -63,6 +63,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-modern-drawer": "^1.4.0",
     "react-multi-carousel": "^2.8.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.0",
